--- a/src/layout/page.scss
+++ b/src/layout/page.scss
@@ -204,6 +204,7 @@
       padding: 7rem;
     }
     @include breakpoint(small) {
+      padding: 4rem;
       padding-left: 1rem;
       padding-right: 1rem;
     }
@@ -212,13 +213,17 @@
       @include breakpoint(normal) {
         padding: 7rem;
       }
+      @include breakpoint(small) {
+        padding: 3rem;
+      }
     }
 
-    padding-bottom: 10rem;
-    padding-top: 10rem;
     .punchline {
       animation: fadein 1s;
       font-size: 4rem;
+      @include breakpoint(small) {
+        font-size: 3rem;
+      }
       padding-bottom: 1rem;
       color: rgba(255, 255, 255, 0.95);
     }
@@ -226,6 +231,10 @@
     .subtext {
       display: flex;
       flex-direction: row;
+      @include breakpoint(small) {
+        flex-direction: column;
+        font-size: 1.4rem;
+      }
       justify-content: center;
       animation: fadein 1s;
       font-size: 1.6rem;
