--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,15 +1,18 @@
 @import './../components/common';
 
 .homePosts {
-  .postGrid {
 
+  margin-top: 4rem;
+  .postGrid {
+    margin:auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    max-width: 100%;
+    max-width: 90rem;
     width: 100%;
     padding: 0;
+
   }
 
   .moreProjects {
@@ -52,21 +55,21 @@
 
     }
     @include breakpoint(normal) {
-      margin: 0.5em;
+      margin: 1em;
       width: 40%;
-      max-width: 50em;
+      max-width: 35em;
     }
 
     background-color: rgb(252, 252, 252);
-    border-radius: 4px;
-    border: 2px solid rgb(200, 200, 200);
+    box-shadow: 0 2px 7px rgba(0,0,0,0.3);
     transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover {
-      border: 2px solid rgb(119, 119, 119);
+      border: none;
       transition: border 0.5s ease-out;
       cursor: pointer;
-      transform: translateY(-4px);
+      transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.5);
       transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
   }
@@ -74,7 +77,7 @@
   $backgroundText: rgba(0, 0, 0, 0.7);
 
   .postTitle {
-    font-size: 2em;
+    font-size: 1.5em;
     color: white;
     font-weight: 600;
     padding: 0.5em;
@@ -84,7 +87,7 @@
   }
 
   .postDate {
-    font-size: 0.8em;
+    font-size: 0.6em;
     color: white;
     background-color: $backgroundText;
     box-decoration-break: clone;
@@ -92,13 +95,12 @@
   }
 
   .postTag {
-    font-size: 1em;
+    font-size: 0.8em;
     color: white;
     font-weight: 600;
     background-color: $backgroundText;
     box-decoration-break: clone;
     padding: 0.5em;
-    opacity: 0.8;
   }
 
   .postHeader {
@@ -127,7 +129,7 @@
       align-items: flex-start;
       align-self: center;
 
-      opacity: 0.4;
+      opacity: 0.7;
       @include basicTransition();
       @include breakpoint(small) {
         opacity: 1;
