--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -52,26 +52,45 @@
     @include breakpoint(small) {
       margin: 0;
       width: 100%;
+      border-bottom: solid 4px black;
+
+      &:first-child {
+        box-shadow: 0 -2px 5px rgba(0,0,0,0.3);
+      }
+
+      &:last-child {
+       border: none;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+      }
+      &:hover {
+        transform: none;
+        cursor: pointer;
+        &:last-child {
+          border: none;
+        }
+      }
 
     }
     @include breakpoint(normal) {
       margin: 1em;
       width: 40%;
       max-width: 35em;
-    }
 
-    background-color: rgb(252, 252, 252);
-    box-shadow: 0 2px 7px rgba(0,0,0,0.3);
-    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover {
-      border: none;
-      transition: border 0.5s ease-out;
-      cursor: pointer;
-      transform: translateY(-2px);
-      box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+      background-color: rgb(252, 252, 252);
+      box-shadow: 0 2px 7px rgba(0,0,0,0.3);
       transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover {
+        border: none;
+        transition: border 0.5s ease-out;
+        cursor: pointer;
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+        transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
     }
+
+
   }
 
   $backgroundText: rgba(0, 0, 0, 0.7);
@@ -140,6 +159,11 @@
       .inside {
         @include basicTransition();
         opacity: 1;
+      }
+
+      @include breakpoint(small) {
+        box-shadow: inset 0 0 0px 10000px rgba(0,0,0,0.3); // easy way to get a black overlay
+        transition: box-shadow 130ms cubic-bezier(0.4, 0, 0.2, 1);
       }
     }
   }
