--- a/src/layout/page.scss
+++ b/src/layout/page.scss
@@ -199,7 +199,7 @@
 
   .overlay {
 
-    background-color: rgba(45, 45, 45, 1);
+    //background-color: rgba(45, 45, 45, 1);
     @include breakpoint(normal) {
       padding: 7rem;
     }
@@ -225,7 +225,7 @@
         font-size: 3rem;
       }
       padding-bottom: 1rem;
-      color: rgba(255, 255, 255, 0.95);
+      color: rgb(50, 50, 50);
     }
 
     .subtext {
@@ -240,7 +240,7 @@
       font-size: 1.6rem;
       font-weight: 400;
       line-height: 1.8em;
-      color: rgb(240, 240, 240);
+      color: rgb(30, 30, 30);
 
       p {
         padding-left: 1rem;
