--- a/src/layout/page.scss
+++ b/src/layout/page.scss
@@ -154,9 +154,8 @@
   }
 
   ul {
-    padding: 0;
-    margin-left: 1em;
-    font-size: 1em;
+   // padding: 0;
+
   }
 
   h1 {
@@ -172,16 +171,27 @@
     font-weight: 400;
   }
   h4 {
-    font-size: 1.1em;
+    font-size: 1.3em;
     font-weight: 600;
-    margin: 0;
     margin-bottom: 0.4em;
+  }
+  h5 {
+    margin: 0;
+  }
+  h6 {
+    margin: 0;
   }
 
   ul {
     color: rgb(50, 50, 50);
-    list-style-type: none;
-    margin-left: 0;
+   // list-style-type: none;
+    font-size: 1rem;
+    padding-left: 1rem;
+
+    li {
+      padding-top: 0.2rem;
+      padding-bottom: 0.2rem;
+    }
   }
 }
 
@@ -245,6 +255,7 @@
       p {
         padding-left: 1rem;
         padding-right: 1rem;
+        margin: 0;
       }
     }
   }
