--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,5 +1,9 @@
 @import '../components/styles';
 
+@mixin basicTransition($type: all) {
+  transition: $type 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .homePosts {
 
   margin-top: 4rem;
@@ -49,7 +53,9 @@
   }
 
   .post {
+    border-radius: 5px;
     @include breakpoint(small) {
+      border-radius: 0;
       margin: 0;
       width: 100%;
       border-bottom: solid 4px black;
@@ -96,6 +102,7 @@
   $backgroundText: rgba(0, 0, 0, 0.7);
 
   .postTitle {
+    border-radius: 5px;
     font-size: 1.5em;
     color: white;
     font-weight: 600;
@@ -106,6 +113,7 @@
   }
 
   .postDate {
+    border-radius: 5px;
     font-size: 0.6em;
     color: white;
     background-color: $backgroundText;
@@ -114,6 +122,7 @@
   }
 
   .postTag {
+    border-radius: 5px;
     font-size: 0.8em;
     color: white;
     font-weight: 600;
@@ -123,12 +132,13 @@
   }
 
   .postHeader {
-
+    border-radius: 5px;
     @include breakpoint(normal) {
       min-height: 15em;
     }
     @include breakpoint(small) {
       min-height: 10em;
+      border-radius: 0;
     }
 
     padding: 2em;
@@ -148,23 +158,33 @@
       align-items: flex-start;
       align-self: center;
 
-      opacity: 0.7;
+      opacity: 0.8;
+
       @include basicTransition();
       @include breakpoint(small) {
         opacity: 1;
       }
+
     }
 
+
+    box-shadow: inset 0 0 0px 1000px rgba(0,0,0,0.1); // easy way to get a black overlay
+    @include breakpoint(small) {
+      box-shadow: none;
+    }
+    @include basicTransition(box-shadow);
     &:hover {
-      .inside {
-        @include basicTransition();
+      @include basicTransition(box-shadow);
+      box-shadow: inset 0 0 0px 1000px rgba(0,0,0,0); // easy way to get a black overlay
+      .textArea {
+        @include basicTransition(opacity);
         opacity: 1;
       }
 
-      @include breakpoint(small) {
-        box-shadow: inset 0 0 0px 10000px rgba(0,0,0,0.3); // easy way to get a black overlay
-        transition: box-shadow 130ms cubic-bezier(0.4, 0, 0.2, 1);
+      .inside {
+        opacity: 1;
       }
+
     }
   }
 
