--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -55,36 +55,23 @@
   .post {
     border-radius: 5px;
     @include breakpoint(small) {
-      border-radius: 0;
-      margin: 0;
-      width: 100%;
-      border-bottom: solid 4px black;
 
-      &:first-child {
-        box-shadow: 0 -2px 5px rgba(0,0,0,0.3);
-      }
-
-      &:last-child {
-       border: none;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-      }
-      &:hover {
-        transform: none;
-        cursor: pointer;
-        &:last-child {
-          border: none;
-        }
-      }
+      width: 95%;
+      margin: 2%;
+      margin-top: 1em;
+      margin-bottom: 1em;
 
     }
+
+    background-color: rgb(252, 252, 252);
+    box-shadow: 0 2px 7px rgba(0,0,0,0.3);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
     @include breakpoint(normal) {
       margin: 1em;
       width: 40%;
       max-width: 35em;
-
-      background-color: rgb(252, 252, 252);
-      box-shadow: 0 2px 7px rgba(0,0,0,0.3);
-      transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
       &:hover {
         border: none;
@@ -138,10 +125,9 @@
     }
     @include breakpoint(small) {
       min-height: 10em;
-      border-radius: 0;
     }
 
-    padding: 2em;
+    padding: 1em;
     margin: 0;
     background-color: #cbcbcb;
     background-repeat: no-repeat;
