--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -5,10 +5,9 @@
 }
 
 .homePosts {
-
   margin-top: 4rem;
   .postGrid {
-    margin:auto;
+    margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -16,7 +15,6 @@
     max-width: 90rem;
     width: 100%;
     padding: 0;
-
   }
 
   .moreProjects {
@@ -24,7 +22,6 @@
     display: grid;
     justify-self: center;
     justify-items: center;
-
 
     a {
       text-align: center;
@@ -35,7 +32,6 @@
   }
 
   .spotlight {
-
     margin-top: 2em;
     text-align: center;
 
@@ -49,24 +45,24 @@
       font-size: 1em;
       margin: 1em;
     }
-
   }
 
   .post {
+    text-decoration: none;
     border-radius: 5px;
     @include breakpoint(small) {
-
       width: 95%;
       margin: 2%;
       margin-top: 1em;
       margin-bottom: 1em;
-
     }
 
     background-color: rgb(252, 252, 252);
-    box-shadow: 0 2px 7px rgba(0,0,0,0.3);
-    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @include breakpoint(normal) {
       margin: 1em;
@@ -78,12 +74,17 @@
         transition: border 0.5s ease-out;
         cursor: pointer;
         transform: translateY(-2px);
-        box-shadow: 0 5px 15px rgba(0,0,0,0.5);
-        transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+        transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+          transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+          box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+          padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
       }
     }
 
-
+    &:hover {
+      text-decoration: none;
+    }
   }
 
   $backgroundText: rgba(0, 0, 0, 0.7);
@@ -150,18 +151,16 @@
       @include breakpoint(small) {
         opacity: 1;
       }
-
     }
 
-
-    box-shadow: inset 0 0 0px 1000px rgba(0,0,0,0.1); // easy way to get a black overlay
+    box-shadow: inset 0 0 0px 1000px rgba(0, 0, 0, 0.1); // easy way to get a black overlay
     @include breakpoint(small) {
       box-shadow: none;
     }
     @include basicTransition(box-shadow);
     &:hover {
       @include basicTransition(box-shadow);
-      box-shadow: inset 0 0 0px 1000px rgba(0,0,0,0); // easy way to get a black overlay
+      box-shadow: inset 0 0 0px 1000px rgba(0, 0, 0, 0); // easy way to get a black overlay
       .textArea {
         @include basicTransition(opacity);
         opacity: 1;
@@ -170,7 +169,6 @@
       .inside {
         opacity: 1;
       }
-
     }
   }
 
