--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -24,6 +24,12 @@
     outline: 0;
   }
 
+  .mail {
+    a {
+      @include themedTagA();
+    }
+  }
+
   p {
     text-align: center;
     color: dimgray;
@@ -43,7 +49,6 @@
       justify-content: center;
 
       .socialIcon {
-
         .svg-icon {
           width: 30px;
           height: 30px;
