--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,21 +1,7 @@
 @import '../components/styles';
 
-@mixin basicTransition($type: all) {
-  transition: $type 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.homePosts {
+.home {
   margin-top: 4rem;
-  .postGrid {
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    max-width: 90rem;
-    width: 100%;
-    padding: 0;
-  }
 
   .moreProjects {
     font-size: 1.5rem;
@@ -29,150 +15,5 @@
       margin-top: 4rem;
       @include themedTagA();
     }
-  }
-
-  .spotlight {
-    margin-top: 2em;
-    text-align: center;
-
-    .title {
-      font-size: 2em;
-      padding-bottom: 0.2em;
-      padding-top: 0.2em;
-    }
-
-    .description {
-      font-size: 1em;
-      margin: 1em;
-    }
-  }
-
-  .post {
-    text-decoration: none;
-    border-radius: 5px;
-    @include breakpoint(small) {
-      width: 95%;
-      margin: 2%;
-      margin-top: 1em;
-      margin-bottom: 1em;
-    }
-
-    background-color: rgb(252, 252, 252);
-    box-shadow: 0 2px 7px rgba(0, 0, 0, 0.3);
-    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    @include breakpoint(normal) {
-      margin: 1em;
-      width: 40%;
-      max-width: 35em;
-
-      &:hover {
-        border: none;
-        transition: border 0.5s ease-out;
-        cursor: pointer;
-        transform: translateY(-2px);
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-        transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-          transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-          box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-          padding 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      }
-    }
-
-    &:hover {
-      text-decoration: none;
-    }
-  }
-
-  $backgroundText: rgba(0, 0, 0, 0.7);
-
-  .postTitle {
-    border-radius: 5px;
-    font-size: 1.5em;
-    color: white;
-    font-weight: 600;
-    padding: 0.5em;
-    background-color: $backgroundText;
-    box-decoration-break: clone;
-    margin-bottom: 0.3em;
-  }
-
-  .postDate {
-    border-radius: 5px;
-    font-size: 0.6em;
-    color: white;
-    background-color: $backgroundText;
-    box-decoration-break: clone;
-    padding: 1em;
-  }
-
-  .postTag {
-    border-radius: 5px;
-    font-size: 0.8em;
-    color: white;
-    font-weight: 600;
-    background-color: $backgroundText;
-    box-decoration-break: clone;
-    padding: 0.5em;
-  }
-
-  .postHeader {
-    border-radius: 5px;
-    @include breakpoint(normal) {
-      min-height: 15em;
-    }
-    @include breakpoint(small) {
-      min-height: 10em;
-    }
-
-    padding: 1em;
-    margin: 0;
-    background-color: #cbcbcb;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-
-    display: grid;
-    align-content: start;
-    justify-content: start;
-
-    .inside {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      align-self: center;
-
-      opacity: 0.8;
-
-      @include basicTransition();
-      @include breakpoint(small) {
-        opacity: 1;
-      }
-    }
-
-    box-shadow: inset 0 0 0px 1000px rgba(0, 0, 0, 0.1); // easy way to get a black overlay
-    @include breakpoint(small) {
-      box-shadow: none;
-    }
-    @include basicTransition(box-shadow);
-    &:hover {
-      @include basicTransition(box-shadow);
-      box-shadow: inset 0 0 0px 1000px rgba(0, 0, 0, 0); // easy way to get a black overlay
-      .textArea {
-        @include basicTransition(opacity);
-        opacity: 1;
-      }
-
-      .inside {
-        opacity: 1;
-      }
-    }
-  }
-
-  .postContent {
-    padding: 1em;
   }
 }
