--- a/src/layout/Layouts.scss
+++ b/src/layout/Layouts.scss
@@ -29,10 +29,9 @@
 
 .Page {
   .prevNextLinks {
+    margin-top: 4rem;
     display: flex;
     flex-wrap: wrap;
-    filter: grayscale(1);
-
     justify-content: space-between;
     @include breakpoint(small) {
       // better style in case it takes two lines
@@ -269,9 +268,9 @@
 
     .punchline {
       animation: fadein 1s;
-      font-size: 4rem;
+      font-size: 3rem;
       @include breakpoint(small) {
-        font-size: 3rem;
+        font-size: 2rem;
       }
       padding-bottom: 1rem;
       color: rgb(50, 50, 50);
