--- a/src/components/bitStyleOverride.scss
+++ b/src/components/bitStyleOverride.scss
@@ -1,1 +1,11 @@
 // Override bit style variables here
+//$backgroundColorForText: rgb(240,240,240);//#fafafa;
+
+$blackLink: #4c4c4c;
+$backgroundColorForText: #fafafa;
+$backgroundColor: rgb(240, 240, 240);
+$navbarColor: rgb(240, 240, 240);
+$accentColor: #3568cf;
+$accentColorIdle: rgb(77, 102, 153);
+$colorIdle: #919191;
+$colorUnselected: rgb(200, 200, 200);
