Big update to gatsby v3 and new template

--- a/src/components/bitStyleOverride.scss
+++ b/src/components/bitStyleOverride.scss
@@ -5,7 +5,7 @@ $blackLink: #4c4c4c;
 $backgroundColorForText: #fafafa;
 $backgroundColor: rgb(240, 240, 240);
 $navbarColor: rgb(240, 240, 240);
-$accentColor: #3568cf;
-$accentColorIdle: rgb(77, 102, 153);
+$accentColor: #800f2f; //#3568cf;
+$accentColorIdle: #800f2f; //#ff4d6d;//rgb(77, 102, 153);
 $colorIdle: #919191;
 $colorUnselected: rgb(200, 200, 200);
