--- a/src/layout/BasicPage.scss
+++ b/src/layout/BasicPage.scss
@@ -235,7 +235,7 @@
   }
 }
 
-.coverBand {
+.basicPageCoverBand {
   text-align: center;
   transition: opacity 1.5s ease;
   font-weight: 600;
@@ -247,7 +247,7 @@
   background-position: center center;
 
   .overlay {
-    background-color: $accentColor;
+    // background-color: $accentColor;
     color: white;
     @include breakpoint(normal) {
       padding: 4rem;
@@ -288,7 +288,7 @@
       font-size: 1.6rem;
       font-weight: 400;
       line-height: 1.8em;
-      color: white;
+      // color: white;
 
       p {
         padding-left: 1rem;
