--- a/src/layout/MainLayout.scss
+++ b/src/layout/MainLayout.scss
@@ -45,9 +45,10 @@
     .gridFooter {
       grid-area: footer;
       display: flex;
-      flex-order: column;
-      align-items: flex-end;
+      flex-direction: column;
+      align-items: center;
       justify-content: center;
+      margin-bottom: 4rem;
     }
   }
 }
