--- a/src/layout/MainLayout.scss
+++ b/src/layout/MainLayout.scss
@@ -60,7 +60,7 @@
   @include breakpoint(small) {
     padding-left: 0em;
     padding-right: 0em;
-    padding-top: 1em;
+    // padding-top: 1em;
     border: none;
   }
 }
