--- a/src/layout/BasicPage.scss
+++ b/src/layout/BasicPage.scss
@@ -89,10 +89,10 @@
     padding: 2em;
 
     @include breakpoint(small) {
-      // padding-left: 0.4em;
-      // padding-right: 0.4em;
-      // padding-top: 2em;
-      // padding-bottom: 2em;
+      padding-left: 0.4em;
+      padding-right: 0.4em;
+      padding-top: 2em;
+      padding-bottom: 2em;
     }
   }
 
